--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -7,11 +7,7 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
   background-color: #282c34;
@@ -35,4 +31,13 @@
   to {
     transform: rotate(360deg);
   }
+} */
+.modal-80w {
+  min-width: 80% !important;
+}
+
+#btn {
+  border-radius: 50px;
+  padding: 0 30px !important;
+  margin-right: 10px;
 }
