--- a/src/components/navigation/Navbar.css
+++ b/src/components/navigation/Navbar.css
@@ -17,3 +17,13 @@
 .navbar-dropdown:hover {
   border: rgb(175, 175, 175) solid 1px;
 }
+
+#icon{
+  font-size: xx-large;
+ 
+}
+#title{
+  font-weight: bold;
+  font-size: 2.0rem;
+  text-transform: uppercase;
+}
